<resources>
    <string name="app_name">Payments</string>
    <string name="shared_preferences_name">pl.pydyniak.payments.AUTHORIZATION_SHARED_PREFERENCES</string>
    <string name="key_name">key</string>

    <string name="payment_name_label">Name</string>
    <string name="payment_description_label">Description</string>
    <string name="payment_price_label">Price</string>
    <string name="payment_date_label">End date:</string>
    <string name="payment_add_label">Add payment</string>
    <string name="payment_edit_label">Edit payment</string>
    <string name="payment_amount_label">Amount:</string>
    <string name="payment_deleted_success">Payment deleted</string>
    <string name="payment_added_success">Payment added</string>
    <string name="payment_edited_success">Payment edited</string>
    <string name="error_not_enough_information">Payment has to have name and price</string>
    <string name="email_text">E-mail</string>
    <string name="password_text">Password</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="not_enough_login_information">Wrong e-mail address or password</string>
    <string name="network_not_avaliable_text">No internet connection</string>
    <string name="wrong_credentials_text">Email or password is incorrect. Password should have at least 6 characters</string>
    <string name="server_exception_text">Problem with server. Try again later</string>
    <string name="synchronize_dialog_title">Synchronize</string>
    <string name="synchronize_dialog_text">Synchronizing. Please wait.</string>
    <string name="unauthorized_exception_text">Unauthorized. Please login or register</string>
    <string name="register_success_text">Registration successful. You can now log in.</string>
    <string name="login_success_text">Login successful. You can now synchronize.</string>
    <string name="synchronize_success">Synchronization successful.</string>
    <string name="date_fragment_label">Date</string>
    <string name="positionExtra">position</string>
    <string name="delete_payment_tag">Delete payment</string>
    <string name="delete_message">Are you sure?</string>
    <string name="delete_positive_button">OK</string>
    <string name="delete_negative_button">NO WAY</string>
    <string name="synchronize_menu_label">Synchronize</string>
    <string name="add_payment_menu_label">Add payment</string>
</resources>
